--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,14 @@
     .normalText{
         @apply text-base font-inter font-normal leading-6 text-[#050038]
     }
+    .star{
+        @apply text-base font-inter text-[#FF9D48] flex items-center justify-center
+    }
     .content11px{
         @apply text-[11px] font-inter font-normal leading-[15px] text-[#FFFFFF] capitalize
+    }
+    .content14px{
+        @apply text-sm font-inter font-normal leading-5 text-[#050038] capitalize
     }
     .device{
         @apply text-[19px] font-inter font-extrabold leading-[25px] text-[#FFC247] pl-[44px] capitalize relative before:absolute before:content-[''] before:h-[2px] before:w-5 before:left-0 before:bg-[#FFC247] before:top-1/2 before:-translate-y-1/2
